Fix shifting when off-canvas is open

--- a/packages/dope/assets/less/site/off-canvas.less
+++ b/packages/dope/assets/less/site/off-canvas.less
@@ -35,10 +35,6 @@ html:not(.canvas-visible) .off-canvas {
   visibility: hidden;
 }
 
-.canvas-opened {
-  overflow-y: hidden;
-}
-
 .canvas-opened .off-canvas {
   transform: translateX(0) !important;
   visibility: visible;
